[gd_scene load_steps=2 format=3 uid="uid://dpfqtlroyuner"]

[ext_resource type="Script" path="res://src/tscns/auth/Authentication.gd" id="1_4lyq1"]

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4lyq1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StateLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Not logged in"

[node name="EmailLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Log in"

[node name="LogoutButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Log out"

[node name="SignupButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sign up"

[node name="SignupButton2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sign up2匿名"

[node name="DataButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sign up2匿名"

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LogoutButton" to="." method="_on_logout_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SignupButton" to="." method="_on_signup_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SignupButton2" to="." method="_on_signup_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/DataButton" to="." method="_on_data_button_pressed"]
